--- a/TheCrew2CompanionApp/TheCrew2CompanionApp.Android/TheCrew2CompanionApp.Android.csproj
+++ b/TheCrew2CompanionApp/TheCrew2CompanionApp.Android/TheCrew2CompanionApp.Android.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="DLToolkit.Forms.Controls.FlowListView">
+      <Version>2.0.11</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="27.0.2.1" />
@@ -96,6 +99,9 @@
       <Project>{C08B563F-E24A-430E-8B7B-B32D8D0AC54D}</Project>
       <Name>TheCrew2CompanionApp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\placeholder.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
