--- a/TheCrew2CompanionApp/TheCrew2CompanionApp/TheCrew2CompanionApp.csproj
+++ b/TheCrew2CompanionApp/TheCrew2CompanionApp/TheCrew2CompanionApp.csproj
@@ -27,4 +27,10 @@
     <PackageReference Include="DLToolkit.Forms.Controls.FlowListView" Version="2.0.11" />
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />  
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\VehicleDetailsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
