--- a/TheCrew2CompanionApp/TheCrew2CompanionApp.Android/TheCrew2CompanionApp.Android.csproj
+++ b/TheCrew2CompanionApp/TheCrew2CompanionApp.Android/TheCrew2CompanionApp.Android.csproj
@@ -52,6 +52,12 @@
     <PackageReference Include="DLToolkit.Forms.Controls.FlowListView">
       <Version>2.0.11</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.CSharp">
+      <Version>4.5.0</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="27.0.2.1" />
