Added some category images.
Added some brand images.
Added some vehicle images.
Fixed some formatting errors in the values presented.

--- a/TheCrew2CompanionApp/TheCrew2CompanionApp/TheCrew2CompanionApp.csproj
+++ b/TheCrew2CompanionApp/TheCrew2CompanionApp/TheCrew2CompanionApp.csproj
@@ -11,18 +11,174 @@
 
   <ItemGroup>
     <None Remove="BrandImages\ManufacturerAbarth.png" />
+    <None Remove="BrandImages\ManufacturerAcura.png" />
+    <None Remove="BrandImages\ManufacturerAlfa_Romeo.png" />
+    <None Remove="BrandImages\ManufacturerAriel.png" />
+    <None Remove="BrandImages\ManufacturerAston_Martin.png" />
+    <None Remove="BrandImages\ManufacturerAudi.png" />
+    <None Remove="BrandImages\ManufacturerBentley.png" />
+    <None Remove="BrandImages\ManufacturerBMW.png" />
+    <None Remove="BrandImages\ManufacturerBugatti.png" />
+    <None Remove="BrandImages\ManufacturerCadillac.png" />
+    <None Remove="BrandImages\ManufacturerChevrolet.png" />
+    <None Remove="BrandImages\ManufacturerChrysler.png" />
+    <None Remove="BrandImages\ManufacturerCitroën.png" />
+    <None Remove="BrandImages\ManufacturerDCB.png" />
+    <None Remove="BrandImages\ManufacturerDodge.png" />
+    <None Remove="BrandImages\ManufacturerDucati.png" />
+    <None Remove="BrandImages\ManufacturerExtra_Aerobatics.png" />
+    <None Remove="BrandImages\ManufacturerFender.png" />
+    <None Remove="BrandImages\ManufacturerFerrari.png" />
+    <None Remove="BrandImages\ManufacturerFord.png" />
+    <None Remove="BrandImages\ManufacturerFrauscher.png" />
+    <None Remove="BrandImages\ManufacturerGranville.png" />
+    <None Remove="BrandImages\ManufacturerHarley-Davidson.png" />
+    <None Remove="BrandImages\ManufacturerHarmon_Rocket.png" />
+    <None Remove="BrandImages\ManufacturerHonda.png" />
+    <None Remove="BrandImages\ManufacturerHummer.png" />
+    <None Remove="BrandImages\ManufacturerICE_Marine.png" />
+    <None Remove="BrandImages\ManufacturerIndian.png" />
+    <None Remove="BrandImages\ManufacturerJaguar.png" />
+    <None Remove="BrandImages\ManufacturerJeep.png" />
+    <None Remove="BrandImages\ManufacturerKawasaki.png" />
+    <None Remove="BrandImages\ManufacturerKoenigsegg.png" />
+    <None Remove="BrandImages\ManufacturerKTM.png" />
+    <None Remove="BrandImages\ManufacturerLamborghini.png" />
+    <None Remove="BrandImages\ManufacturerLancia.png" />
+    <None Remove="BrandImages\ManufacturerLotus.png" />
+    <None Remove="BrandImages\ManufacturerMaserati.png" />
+    <None Remove="BrandImages\ManufacturerMazda.png" />
+    <None Remove="BrandImages\ManufacturerMcLaren.png" />
+    <None Remove="BrandImages\ManufacturerMercedes-Benz.png" />
+    <None Remove="BrandImages\ManufacturerMini.png" />
+    <None Remove="BrandImages\ManufacturerMV_Agusta.png" />
+    <None Remove="BrandImages\ManufacturerNissan.png" />
+    <None Remove="BrandImages\ManufacturerPagani.png" />
+    <None Remove="BrandImages\ManufacturerPeugeot.png" />
+    <None Remove="BrandImages\ManufacturerPilatus.png" />
+    <None Remove="BrandImages\ManufacturerPorsche.png" />
+    <None Remove="BrandImages\ManufacturerProto.png" />
+    <None Remove="BrandImages\ManufacturerRed_Bull.png" />
+    <None Remove="BrandImages\ManufacturerRenault.png" />
+    <None Remove="BrandImages\ManufacturerRUF.png" />
+    <None Remove="BrandImages\ManufacturerSaleen.png" />
+    <None Remove="BrandImages\ManufacturerShelby.png" />
+    <None Remove="BrandImages\ManufacturerSlick_Aircraft.png" />
+    <None Remove="BrandImages\ManufacturerSupermarine.png" />
+    <None Remove="BrandImages\ManufacturerSuzuki.png" />
+    <None Remove="BrandImages\ManufacturerTVR.png" />
+    <None Remove="BrandImages\ManufacturerVector.png" />
+    <None Remove="BrandImages\ManufacturerVolkswagen.png" />
+    <None Remove="BrandImages\ManufacturerWACO.png" />
+    <None Remove="BrandImages\ManufacturerZivko.png" />
     <None Remove="BrandsList.json" />
     <None Remove="CarImages\TC2Abarth124rally.jpg" />
     <None Remove="CarImages\TC2Abarth124spider.jpg" />
+    <None Remove="CarImages\TC2Abarth500.jpg" />
+    <None Remove="CarImages\TC2Abarth500MT.jpg" />
+    <None Remove="CarImages\TC2AcuraNSX.jpg" />
+    <None Remove="CarImages\TC2AcuraNSXDF.jpg" />
+    <None Remove="CarImages\TC2AeroboatSV12.jpg" />
+    <None Remove="CarImages\TC2AlfaRomeo4C.jpg" />
+    <None Remove="CarImages\TC2AlfaRomeo8CCompetizione.jpg" />
+    <None Remove="CarImages\TC2AlfaRomeo8CCompetizioneTC.jpg" />
+    <None Remove="CarImages\TC2AlfaRomeoGiuliaQuadrifoglio.jpg" />
     <None Remove="CarsList.json" />
+    <None Remove="CategoryImages\TC2LogoDF.jpg" />
+    <None Remove="CategoryImages\TC2LogoDR.jpg" />
+    <None Remove="CategoryImages\TC2LogoHC.jpg" />
+    <None Remove="CategoryImages\TC2LogoMT.jpg" />
+    <None Remove="CategoryImages\TC2LogoPB.jpg" />
+    <None Remove="CategoryImages\TC2LogoRR.jpg" />
+    <None Remove="CategoryImages\TC2LogoRX.jpg" />
+    <None Remove="CategoryImages\TC2LogoSR.jpg" />
+    <None Remove="CategoryImages\TC2LogoTC.jpg" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="BrandImages\ManufacturerAbarth.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerAcura.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerAlfa_Romeo.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerAriel.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerAston_Martin.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerAudi.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerBentley.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerBMW.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerBugatti.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerCadillac.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerChevrolet.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerChrysler.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerCitroën.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerDCB.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerDodge.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerDucati.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerExtra_Aerobatics.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerFender.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerFerrari.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerFord.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerFrauscher.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerGranville.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerHarley-Davidson.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerHarmon_Rocket.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerHonda.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerHummer.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerICE_Marine.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerIndian.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerJaguar.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerJeep.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerKawasaki.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerKoenigsegg.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerKTM.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerLamborghini.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerLancia.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerLotus.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerMaserati.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerMazda.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerMcLaren.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerMercedes-Benz.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerMini.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerMV_Agusta.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerNissan.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerPagani.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerPeugeot.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerPilatus.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerPorsche.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerProto.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerRed_Bull.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerRenault.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerRUF.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerSaleen.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerShelby.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerSlick_Aircraft.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerSupermarine.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerSuzuki.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerTVR.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerVector.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerVolkswagen.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerWACO.png" />
+    <EmbeddedResource Include="BrandImages\ManufacturerZivko.png" />
     <EmbeddedResource Include="BrandsList.json" />
     <EmbeddedResource Include="CarImages\TC2Abarth124rally.jpg" />
     <EmbeddedResource Include="CarImages\TC2Abarth124spider.jpg" />
+    <EmbeddedResource Include="CarImages\TC2Abarth500.jpg" />
+    <EmbeddedResource Include="CarImages\TC2Abarth500MT.jpg" />
+    <EmbeddedResource Include="CarImages\TC2AcuraNSX.jpg" />
+    <EmbeddedResource Include="CarImages\TC2AcuraNSXDF.jpg" />
+    <EmbeddedResource Include="CarImages\TC2AeroboatSV12.jpg" />
+    <EmbeddedResource Include="CarImages\TC2AlfaRomeo4C.jpg" />
+    <EmbeddedResource Include="CarImages\TC2AlfaRomeo8CCompetizione.jpg" />
+    <EmbeddedResource Include="CarImages\TC2AlfaRomeo8CCompetizioneTC.jpg" />
+    <EmbeddedResource Include="CarImages\TC2AlfaRomeoGiuliaQuadrifoglio.jpg" />
     <EmbeddedResource Include="CarsList.json" />
+    <EmbeddedResource Include="CategoryImages\TC2LogoDF.jpg" />
+    <EmbeddedResource Include="CategoryImages\TC2LogoDR.jpg" />
+    <EmbeddedResource Include="CategoryImages\TC2LogoHC.jpg" />
+    <EmbeddedResource Include="CategoryImages\TC2LogoMT.jpg" />
+    <EmbeddedResource Include="CategoryImages\TC2LogoPB.jpg" />
+    <EmbeddedResource Include="CategoryImages\TC2LogoRR.jpg" />
+    <EmbeddedResource Include="CategoryImages\TC2LogoRX.jpg" />
+    <EmbeddedResource Include="CategoryImages\TC2LogoSR.jpg" />
+    <EmbeddedResource Include="CategoryImages\TC2LogoTC.jpg" />
   </ItemGroup>
 
   <ItemGroup>
