--- a/TheCrew2CompanionApp/TheCrew2CompanionApp.Android/Properties/AndroidManifest.xml
+++ b/TheCrew2CompanionApp/TheCrew2CompanionApp.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.TheCrew2CompanionApp" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.diatosta.TheCrew2CompanionApp" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<application android:label="TheCrew2CompanionApp.Android"></application>
+	<application android:label="TC2 Companion App"></application>
 </manifest>
